--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Dylan Leon <span>Freelancer</span></h1>
+        <h1 class="titulo">Dylan Leon<span>Freelancer</span></h1>
     </header>
     <div class="nav-bg">
         <nav class="navegacion-principal">
@@ -28,47 +28,47 @@
             <a href="#">Contactar</a>
         </div>
     </section>
-    <main class="contenedor sombra">
-        <h2>Servicios</h2>
-        <div>
+    <main class="contenedor  sombra">
+        <h1>Servicios</h1>
+        <div class="Servicio">
             <section>
-                <h3>Diseño Web</h3>
+                <h3>Diseño</h3>
                 <div>
-                    Diseño Web
+                    Diseño
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
             </section>
-            <section>
-                <h3>Aplicaciones</h3>
-                <div>
-                    Android
+            <section class="Servicio">
+                <h3>E-Commerce</h3>
+                <div class="Servicio">
+                    E-Commerce
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
             </section>
-            <section>
+            <section>       
                 <h3>Contacto</h3>
-                <forma action="">
+                <forma action="" class="formulario">
                     <fieldset>
                         <legend>Rellena este formulario para participar</legend>
-                        <div>
+                        <div class="contenedor-campos">
                             <label for="nombre">Nombre: </label>
-                            <input type="text" placeholder="ingresa tu nombre">     
+                            <input class="imput-text" placeholder="ingresa tu nombre">     
                         </div>
-                        <div>
+                        <div class="campo">
                             <label for="telefono">Telefono: </label>    
-                            <input type="tel" placeholder="ingresa tu numero">   
+                            <input class="imput-text" placeholder="ingresa tu numero">   
                         </div>
-                        <div>
+                        <div class="campo">
                             <label for="correo">Correo: </label>    
-                            <input type="email" placeholder="ingresa tu email">   
+                            <input class="imput-text" placeholder="ingresa tu email">   
                         </div>
-                        <div>
+                        <div class="campo">
                             <label for="mensaje">Mensaje: </label>    
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Permite hasta 300 caracteres"></textarea>
+                            <textarea class="input-text" id="" cols="30" rows="10" placeholder="Permite hasta 300 caracteres"></textarea>
                         </div>
     
-                        <div>
-                            <input type="submit" value="Registrar">
+                        <div class="alinear-derecha flex">
+                            <input class="boton w-sm-100" type="submit" value="Registrar">
                         </div>
                     </fieldset>
                 </form>
@@ -76,7 +76,7 @@
         </div>
         
     </main>
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados. Dylan Leon Freelancer</p>
 </body>
 </html>
